# alto

./: README.md  alto.cabal  stack.yaml
app/: Main.hs
src/: Contracts.hs  ExampleModel.hs  Model.hs  Sparklines.hs
src/Alto/: Contracts.hs  ExampleModel.hs  FinalTagless.hs  Model.hs
test/: Spec.hs
